# frost

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SPEC.md  abi.py  build.rs  clippy.toml  frost_fuzz_s12c.c  frost_fuzz_s57c.c  justfile  rustfmt.toml  test_if_let.frost
--help/: lines_100.frost  lines_1600.frost  lines_400.frost  lines_6400.frost  mono_10240.frost  mono_2560.frost  mono_640.frost
.cargo/: config.toml
bench/: generate.py
bootstrap/: README.md  ast.frost  compiler.frost  frost.frost  lexer.frost  main.frost  minifrost.frost  parser.frost  run.frost  typechecker.frost  vm.frost
docs/: allocators.md  architecture.md  authoring.md  build-modes.md  c-compatibility.md  callbacks.md  coming-from-rust.md  memory-safety.md  memory_model.md  modules.md  native-pools.md  philosophy.md  roadmap.md  self-hosting.md  separate-compilation.md  spec.md  syntax-design.md  tour.md
examples/: arena_pool_demo.frost  array_set_test.frost  bootstrap_test.frost  comptime_bitmask.frost  comptime_ecs.frost  comptime_field_access.frost  comptime_simple.frost  comptime_struct_test.frost  ecs_movement.frost  ecs_simple.frost  eval_arrays.frost  eval_basics.frost  eval_comprehensive.frost  eval_fizzbuzz.frost  eval_functions.frost  eval_move_error.frost  eval_ownership.frost  eval_structs.frost  factorial.frost  fizzbuzz.frost  freecs.frost  freestanding.frost  hello.frost  import_example.frost  import_vectors.frost  learn_frost.frost  loops.frost  math.frost  ref_test.frost  tagged_union.frost  test_arr.frost  test_calc.frost  test_const.frost  (+2 more)
(+94 files in other folders)
