[package]
name = "frost"
version = "0.1.0"
authors = ["Matthew J. Berger <matthewberger@nevada.unr.edu>"]
edition = "2024"

[workspace]
members = ["repl"]
default-members = ["repl"]

[dependencies]
anyhow = "1.0.40"
clap = { version = "4", features = ["derive"] }
cranelift = "0.116"
cranelift-module = "0.116"
cranelift-object = "0.116"
cranelift-native = "0.116"
target-lexicon = "0.13"
