[package]
name = "frost"
version = "0.1.0"
authors = ["Matthew J. Berger <matthewberger@nevada.unr.edu>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A small, statically typed, data-oriented systems language"
repository = "https://github.com/matthewjberger/frost"

[dependencies]
anyhow = "1.0.40"
clap = { version = "4", features = ["derive"] }
cranelift = "0.116"
cranelift-module = "0.116"
cranelift-object = "0.116"
cranelift-native = "0.116"
serde = { version = "1.0.229", features = ["derive"] }
target-lexicon = "0.13"
serde_json = "1.0.151"
